1주차/project_ws/log/build_2024-11-06_14-25-08/turtlebot/stderr.log
  File "/home/bok/project_ws/install/turtlebot/lib/python3.10/site-packages/turtlebot/menu_gui.py", line 197
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 197)

